parte2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> html
Rule 1     html -> elementos
Rule 2     elementos -> elemento elementos
Rule 3     elementos -> elemento
Rule 4     elemento -> ABRIR_ETIQUETA atributos FIN_ETIQUETA elementos CERRAR_ETIQUETA
Rule 5     elemento -> ETIQUETA_AUTOCIERRE
Rule 6     elemento -> TEXTO
Rule 7     atributos -> atributo atributos
Rule 8     atributos -> atributo
Rule 9     atributos -> <empty>
Rule 10    atributo -> NOMBRE_ATRIBUTO IGUAL VALOR_ATRIBUTO

Terminals, with rules where they appear

ABRIR_ETIQUETA       : 4
CERRAR_ETIQUETA      : 4
ETIQUETA_AUTOCIERRE  : 5
FIN_ETIQUETA         : 4
IGUAL                : 10
NOMBRE_ATRIBUTO      : 10
TEXTO                : 6
VALOR_ATRIBUTO       : 10
error                : 

Nonterminals, with rules where they appear

atributo             : 7 8
atributos            : 4 7
elemento             : 2 3
elementos            : 1 2 4
html                 : 0

Parsing method: LALR

state 0

    (0) S' -> . html
    (1) html -> . elementos
    (2) elementos -> . elemento elementos
    (3) elementos -> . elemento
    (4) elemento -> . ABRIR_ETIQUETA atributos FIN_ETIQUETA elementos CERRAR_ETIQUETA
    (5) elemento -> . ETIQUETA_AUTOCIERRE
    (6) elemento -> . TEXTO

    ABRIR_ETIQUETA  shift and go to state 4
    ETIQUETA_AUTOCIERRE shift and go to state 5
    TEXTO           shift and go to state 6

    html                           shift and go to state 1
    elementos                      shift and go to state 2
    elemento                       shift and go to state 3

state 1

    (0) S' -> html .



state 2

    (1) html -> elementos .

    $end            reduce using rule 1 (html -> elementos .)


state 3

    (2) elementos -> elemento . elementos
    (3) elementos -> elemento .
    (2) elementos -> . elemento elementos
    (3) elementos -> . elemento
    (4) elemento -> . ABRIR_ETIQUETA atributos FIN_ETIQUETA elementos CERRAR_ETIQUETA
    (5) elemento -> . ETIQUETA_AUTOCIERRE
    (6) elemento -> . TEXTO

    $end            reduce using rule 3 (elementos -> elemento .)
    CERRAR_ETIQUETA reduce using rule 3 (elementos -> elemento .)
    ABRIR_ETIQUETA  shift and go to state 4
    ETIQUETA_AUTOCIERRE shift and go to state 5
    TEXTO           shift and go to state 6

    elemento                       shift and go to state 3
    elementos                      shift and go to state 7

state 4

    (4) elemento -> ABRIR_ETIQUETA . atributos FIN_ETIQUETA elementos CERRAR_ETIQUETA
    (7) atributos -> . atributo atributos
    (8) atributos -> . atributo
    (9) atributos -> .
    (10) atributo -> . NOMBRE_ATRIBUTO IGUAL VALOR_ATRIBUTO

    FIN_ETIQUETA    reduce using rule 9 (atributos -> .)
    NOMBRE_ATRIBUTO shift and go to state 10

    atributos                      shift and go to state 8
    atributo                       shift and go to state 9

state 5

    (5) elemento -> ETIQUETA_AUTOCIERRE .

    ABRIR_ETIQUETA  reduce using rule 5 (elemento -> ETIQUETA_AUTOCIERRE .)
    ETIQUETA_AUTOCIERRE reduce using rule 5 (elemento -> ETIQUETA_AUTOCIERRE .)
    TEXTO           reduce using rule 5 (elemento -> ETIQUETA_AUTOCIERRE .)
    $end            reduce using rule 5 (elemento -> ETIQUETA_AUTOCIERRE .)
    CERRAR_ETIQUETA reduce using rule 5 (elemento -> ETIQUETA_AUTOCIERRE .)


state 6

    (6) elemento -> TEXTO .

    ABRIR_ETIQUETA  reduce using rule 6 (elemento -> TEXTO .)
    ETIQUETA_AUTOCIERRE reduce using rule 6 (elemento -> TEXTO .)
    TEXTO           reduce using rule 6 (elemento -> TEXTO .)
    $end            reduce using rule 6 (elemento -> TEXTO .)
    CERRAR_ETIQUETA reduce using rule 6 (elemento -> TEXTO .)


state 7

    (2) elementos -> elemento elementos .

    $end            reduce using rule 2 (elementos -> elemento elementos .)
    CERRAR_ETIQUETA reduce using rule 2 (elementos -> elemento elementos .)


state 8

    (4) elemento -> ABRIR_ETIQUETA atributos . FIN_ETIQUETA elementos CERRAR_ETIQUETA

    FIN_ETIQUETA    shift and go to state 11


state 9

    (7) atributos -> atributo . atributos
    (8) atributos -> atributo .
    (7) atributos -> . atributo atributos
    (8) atributos -> . atributo
    (9) atributos -> .
    (10) atributo -> . NOMBRE_ATRIBUTO IGUAL VALOR_ATRIBUTO

  ! reduce/reduce conflict for FIN_ETIQUETA resolved using rule 8 (atributos -> atributo .)
    FIN_ETIQUETA    reduce using rule 8 (atributos -> atributo .)
    NOMBRE_ATRIBUTO shift and go to state 10

  ! FIN_ETIQUETA    [ reduce using rule 9 (atributos -> .) ]

    atributo                       shift and go to state 9
    atributos                      shift and go to state 12

state 10

    (10) atributo -> NOMBRE_ATRIBUTO . IGUAL VALOR_ATRIBUTO

    IGUAL           shift and go to state 13


state 11

    (4) elemento -> ABRIR_ETIQUETA atributos FIN_ETIQUETA . elementos CERRAR_ETIQUETA
    (2) elementos -> . elemento elementos
    (3) elementos -> . elemento
    (4) elemento -> . ABRIR_ETIQUETA atributos FIN_ETIQUETA elementos CERRAR_ETIQUETA
    (5) elemento -> . ETIQUETA_AUTOCIERRE
    (6) elemento -> . TEXTO

    ABRIR_ETIQUETA  shift and go to state 4
    ETIQUETA_AUTOCIERRE shift and go to state 5
    TEXTO           shift and go to state 6

    elementos                      shift and go to state 14
    elemento                       shift and go to state 3

state 12

    (7) atributos -> atributo atributos .

    FIN_ETIQUETA    reduce using rule 7 (atributos -> atributo atributos .)


state 13

    (10) atributo -> NOMBRE_ATRIBUTO IGUAL . VALOR_ATRIBUTO

    VALOR_ATRIBUTO  shift and go to state 15


state 14

    (4) elemento -> ABRIR_ETIQUETA atributos FIN_ETIQUETA elementos . CERRAR_ETIQUETA

    CERRAR_ETIQUETA shift and go to state 16


state 15

    (10) atributo -> NOMBRE_ATRIBUTO IGUAL VALOR_ATRIBUTO .

    NOMBRE_ATRIBUTO reduce using rule 10 (atributo -> NOMBRE_ATRIBUTO IGUAL VALOR_ATRIBUTO .)
    FIN_ETIQUETA    reduce using rule 10 (atributo -> NOMBRE_ATRIBUTO IGUAL VALOR_ATRIBUTO .)


state 16

    (4) elemento -> ABRIR_ETIQUETA atributos FIN_ETIQUETA elementos CERRAR_ETIQUETA .

    ABRIR_ETIQUETA  reduce using rule 4 (elemento -> ABRIR_ETIQUETA atributos FIN_ETIQUETA elementos CERRAR_ETIQUETA .)
    ETIQUETA_AUTOCIERRE reduce using rule 4 (elemento -> ABRIR_ETIQUETA atributos FIN_ETIQUETA elementos CERRAR_ETIQUETA .)
    TEXTO           reduce using rule 4 (elemento -> ABRIR_ETIQUETA atributos FIN_ETIQUETA elementos CERRAR_ETIQUETA .)
    $end            reduce using rule 4 (elemento -> ABRIR_ETIQUETA atributos FIN_ETIQUETA elementos CERRAR_ETIQUETA .)
    CERRAR_ETIQUETA reduce using rule 4 (elemento -> ABRIR_ETIQUETA atributos FIN_ETIQUETA elementos CERRAR_ETIQUETA .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: reduce/reduce conflict in state 9 resolved using rule (atributos -> atributo)
WARNING: rejected rule (atributos -> <empty>) in state 9
